example/lib/src/arbs/errors/app_vi.arb
{
  "@@locale": "vi",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Đã xảy ra lỗi",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Đã xảy ra lỗi bất ngờ",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Báo cáo lỗi đã được gửi thành công.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}